Criacao do CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,1 +1,6 @@
+cmake_minimum_required(VERSION 3.22)
+project(trabalho-pratico-parte-1-dnp)
+set(CMAKE_CXX_STANDARD 14)
+include_directories(.)
 
+add_executable(funcionamentoHash tests/teste1.cpp src/hash.cpp src/list.cpp src/no.cpp include/hash.h include/list.h include/no.h)
