Implementacao do teste2.cpp que pega todas as palavras de todos os livros

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 
 add_executable(funcionamentoHash tests/teste1.cpp src/hash.cpp src/list.cpp src/no.cpp include/hash.h include/list.h include/no.h)
+add_executable(test2 tests/teste2.cpp src/hash.cpp src/list.cpp src/no.cpp include/hash.h include/list.h include/no.h)
